Задание 6 Поправил замечания.